# some-game-gl

./: .gitignore  .gitmodules  GameEngineGL.sln  README.md
GameEngineGL/: .clangd  .compile_flags.txt  .gitattributes  CMakeLists.txt  GameEngineGL.vcxproj  GameEngineGL.vcxproj.filters  Shader.cpp  Shader.h  build.ps1  build.sh  clean.ps1  fullbuild.ps1  glad.c  main.cpp  shader.frag  shader.vert
GameEngineGL/include/glad/: glad.h
GameEngineGL/levels/: Desert.tsx  less-light.tiled-session  lvl1.json  lvl1.tmx  lvl2.json  lvl2.tmx  lvl3.tmx  one.lvl
GameEngineGL/lib/: glfw3.lib
GameEngineGL/shaders/: cube.frag  cube.vert  new_shader.vert
GameEngineGL/src/: Animation.h  BallObject.cpp  BallObject.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  CharacterObject.cpp  CharacterObject.h  Directions.h  Emitter.cpp  Emitter.h  EventQueue.cpp  EventQueue.h  EventType.h  FontRenderer.cpp  FontRenderer.h  Game.cpp  Game.h  GameEvent.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  MenuScreen.cpp  MenuScreen.h  Receiver.cpp  Receiver.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SoundEngine.h  SoundEngineSDL.cpp  SoundEngineSDL.h  SpriteRenderer.cpp  SpriteRenderer.h  Spritesheet.cpp  (+14 more)
GameEngineGL/src/shaders/: compile.bat  cube.vert  level_restart.frag  light.vert  new_shader.vert  new_shader2.vert
